tests/models/enum/unnamed/unit/fail/alias.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(alias = "val")]
       ()
    ),
}
fn main() {}
