tests/models/enum/unnamed/unit/fail/alias.stderr
error: No support alias term on the unnamed field.
 --> tests/models/enum/unnamed/unit/fail/alias.rs:4:10
  |
4 |       Value(
  |  __________^
5 | |        #[field(alias = "val")]
6 | |        ()
7 | |     ),
  | |_____^
